1.4.0-vcli-alpha Sara

* Bug fix to the upload repository service (reading from the same input stream multiple times)

* Added the proxied url to the execute services execute_url and list_running_flows

* Added a call that returns the proxied url on the component context properties

* Hooked the webui proxy to the meandre server. This is just a bypass to the 
  webUI handler. The secondary server is still being started.

* Adding test to the WebUI infrastructure previous to the WebUI proxying. The
  basic strategy is to stand a servlet handler on the service that tracks /webui/
  requests and process them. 

* Added a WS in the new created jobs section to pull the current console output of a job

* Modified the interactive execution methods to create a new persistent print writer

* Created a persistent print writer wrapper to store the execution console

* Created the web service that list the status of the jobs run in the cluster so far

* Added to query and mechanics to manage job statuses

* Written the basic queries and mechanics to have a persistent log and console

* Started creating the base infrastructure for the service.

* Refactored the coordinator backend adapter to reflect the coordinator nature of it.

* Added the html auxiliar facade that allows top upload and execute a repository

* Added a new execute service that accepts a post of 'repository' and runs all the flows in the 
  contained repository. It also tries to add missing components from the user repository if needed.
  
* Services to expose cluster information
	- Added log service that listed the log information
	- Added status service that listed the server's status information
	- Added info service that listed the servers' information
	- Added properties service that listed the properties of the server's 

* Modfyied the MDX to return the log entries (had to specialize the insert status to make Derby happy)

* Creates an auxiliar service that just display forms for 